--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
