--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
   {
-  "name": "backend",
+    "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "db:seed": "node prisma/seed.js",
     "dev": "nodemon server.js",
     "start": "node server.js",
+    "db:seed": "node prisma/seed.js",
     "db:migrate": "prisma migrate dev --name init",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
