--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,34 @@
-  {
+{
     "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
-    "db:seed": "node prisma/seed.js",
-    "db:migrate": "prisma migrate dev --name init",
-    "db:studio": "prisma studio",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.15.0",
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.15.0"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+        "dev": "nodemon server.js",
+        "start": "node server.js",
+        "db:seed": "node prisma/seed.js",
+        "db:migrate": "prisma migrate dev --name init",
+        "db:studio": "prisma studio",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@prisma/client": "^6.15.0",
+        "bcryptjs": "^3.0.2",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.2",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^7.0.9",
+        "prisma": "^6.15.0"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.js"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    }
 }
