--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.15.0",
+        "axios": "^1.13.2",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -23,6 +24,7 @@
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
+        "node-cron": "^4.2.1",
         "nodemailer": "^7.0.9",
         "pdfkit": "^0.17.2",
         "prisma": "^6.15.0",
