--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.15.0",
+        "adm-zip": "^0.5.16",
         "axios": "^1.13.2",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
