Corrección de detalles de migración
Se corrigieron detalles en los archivos de migración ya que al moverlos a railway presentaba errores de tipo sintaxis ya que en el schema.prisma se crearon los modelos con mayusuclas tipo User, pero en los archivos de migración se encontraban en minusculas tipo "user", se cambiaron al orden de como estaban declaradas en el schema, pasó de "user" a "User", o de "accesslog" a "AccessLog", etc.

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
     "scripts": {
         "dev": "nodemon server.js",
         "start": "node server.js",
+        "build": "prisma generate && prisma migrate deploy",
+        "migrate:dev": "prisma migrate dev",
+        "migrate:deploy": "prisma migrate deploy",
         "db:seed": "node prisma/seed.js",
-        "db:migrate": "prisma migrate dev --name init",
         "db:studio": "prisma studio",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
