--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
         "nodemailer": "^7.0.9",
         "pdfkit": "^0.17.2",
         "prisma": "^6.15.0",
+        "resend": "^6.5.2",
         "xlsx": "^0.18.5"
     },
     "prisma": {
