--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "adm-zip": "^0.5.16",
         "axios": "^1.13.2",
         "bcryptjs": "^3.0.2",
+        "cloudinary": "^2.8.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "csv-parser": "^3.2.0",
