--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,10 @@
       "source": "/api/:path*",
       "destination": "https://accescom-production.up.railway.app/api/:path*"
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "env": {
+    "GENERATE_SOURCEMAP": "false"
+  }
 }
